test/functions/bradc/paramThis/funParamThis2.good
funParamThis2.chpl:1: error: Cannot apply a 'this' intent to a standalone function
